@startuml
!include Ventoriq_00_Style.puml

title Ventoriq - Angebote und Rechnungen

left to right direction

skinparam nodesep 80
skinparam ranksep 80
skinparam linetype ortho

package "Belege" {

  entity Offer {
    + id
    + customerId
    + offerNumber
    + date
    + validUntil
    + status
    + subtotal
    + tax
    + total
    + selectedAttachments
    + bookedToCashbook
  }

  entity OfferItem {
    + id
    + offerId
    + articleNumber
    + description
    + quantity
    + unitPrice
  }

  entity Invoice {
    + id
    + customerId
    + invoiceNumber
    + date
    + dueDate
    + status
    + subtotal
    + tax
    + total
    + selectedAttachments
    + bookedToCashbook
    --
    + CalculateTotals(items)
  }

  entity InvoiceItem {
    + id
    + invoiceId
    + articleNumber
    + description
    + quantity
    + unitPrice
  }
}

package "Service" {
  class OfferInvoiceService <<static service>> {
    + ConvertOfferToInvoice(offer, items, db)
  }
}

package "Persistenz" {
  class DataBase <<Repository / SQLite-Fassade>> {
    + Offer CRUD
    + OfferItem CRUD
    + Invoice CRUD
    + InvoiceItem CRUD
  }
}

Offer "1" *-- "1..*" OfferItem : enthält
Invoice "1" *-- "1..*" InvoiceItem : enthält

OfferInvoiceService --> Offer : liest Angebot
OfferInvoiceService --> Invoice : erstellt Rechnung
OfferInvoiceService --> InvoiceItem : erzeugt Positionen

Offer ..> Invoice : wird konvertiert zu

DataBase --> Offer : CRUD
DataBase --> Invoice : CRUD

note bottom
Dieses Diagramm zeigt nur den Beleg-Kern:
Angebote, Angebotspositionen, Rechnungen, Rechnungspositionen und die Konvertierung.
Detailbeziehungen zu PDF, Textdokumenten und Dateisystem sind bewusst ausgelagert.
end note

@enduml